--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>Pepsi</title>
 </head>
 <body>
+
+    <header>
+        <img src="img/logo-pepsi.png" alt="logo-pepsi">
+        <nav>
+            <a>Home</a>
+            <a>Produtos</a>
+            <a>PassaTempos</a>
+            <a>Contato</a>
+        </nav>
+        <img src="img/icone-carrinho.png" alt="icone-carrinho">
+        <img src="img/icone-conta.png" alt="icone-conta">
+    </header>
     
 </body>
 </html>
