Estrutura corpo do site

--- a/index.html
+++ b/index.html
@@ -20,5 +20,45 @@
         <img src="img/icone-conta.png" alt="icone-conta">
     </header>
     
+    <main>
+
+        <section>
+            <img src="img/img-principal-corpo.png">
+        </section>
+
+        <section>
+            <img src="img/produtos.png">
+        </section>
+
+        <section>
+            <img src="img/Docinho.png">
+            <p>A mais doce e energética do trio, a bebida da Bombom é 
+               uma verdadeira explosão de sabor. Com morango suculento, 
+               chocolate branco cremoso e um toque de baunilha.</p>
+            <img src="img/imagem-bebida-1.png">
+        </section>
+
+        <section>
+            <img src="img/Florzinha.png">
+            <p>Para os momentos de paz e tranquilidade, a bebida da 
+               Florzinha é a escolha certa. Com chá de camomila relaxante,
+               mel suave e um toque cítrico de limão, essa bebida amarela.</p>
+            <img src="img/imagem-bebida-2.png">
+        </section>
+
+        <section>
+            <img src="img/Lindinha.png">
+            <p>A mais divertida e espontânea do grupo, a bebida da Lindinha é um verdadeiro 
+               show de sabores. Com frutas vermelhas frescas, iogurte natural cremoso e um 
+               toque de hortelã refrescante.</p>
+            <img src="img/imagem-bebida-3.png">
+        </section>
+
+        <section>
+            <img src="img/img-parceria.png">
+        </section>
+
+    </main>
+    
 </body>
 </html>
