--- a/index.html
+++ b/index.html
@@ -59,6 +59,18 @@
         </section>
 
     </main>
-    
+
 </body>
+
+    <footer>
+        <header>
+            <nav>
+                <a>Home</a>
+                <a>Produtos</a>
+                <a>PassaTempos</a>
+                <a>Contato</a>
+            </nav>
+            <img src="img/logo-rodape.png" alt="logo-pepsi">
+        </header>
+    </footer>
 </html>
