Adicionando detalhes da página

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <title>Pepsi</title>
+    <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" type="text/css" href="css.css">
 </head>
 <body>
@@ -77,14 +78,13 @@
     <footer class="rodape">
         <header  class="rodape-conteudo">
             <nav class="menu-rodape">
-                <a class="item-rodape">Home</a>
-                <a class="item-rodape">Produtos</a>
-                <a class="item-rodape">PassaTempos</a>
-                <a class="item-rodape">Contato</a>
-                <img class="logo-rodape" src="img/logo-rodape.png" alt="logo-pepsi">
+                <a href="" class="item-rodape">Home</a>
+                <a href="" class="item-rodape">Produtos</a>
+                <a href="" class="item-rodape">PassaTempos</a>
+                <a href="" class="item-rodape">Contato</a>
+                <img href="" class="logo-rodape" src="img/logo-rodape.png" alt="logo-pepsi">
             </nav>
-           
         </header>
-        
     </footer>
+
 </html>
